--- a/02_ch_regression.ipynb
+++ b/02_ch_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = get_data(\"insurance\")\n",
     "# data.select_dtypes(include=[\"number\"]).hist(bins=30, figsize=(6, 4))\n",
+    "# plt.show()\n",
+    "\n",
+    "numeric = [\"age\", \"bmi\", \"children\", \"charges\"]\n",
+    "# data[numeric].hist(bins=20, figsize = (12,8))\n",
     "# plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +108,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = [\"age\", \"bmi\", \"charges\", \"smoker\"]\n",
     "# sns.pairplot(data[cols], hue='smoker')\n",
     "# plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Pycaret environment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = setup(\n",
+    "    data=data,\n",
+    "    target=\"charges\",\n",
+    "    train_size=0.8,\n",
+    "    session_id=123,\n",
+    "    numeric_features=numeric[:-1],\n",
+    "    categorical_features=categorical,\n",
+    "    transformation=True,\n",
+    "    normalize=True,\n",
+    "    transform_target=True,\n",
+    "    # one_hot_encoding=True\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = create_model('gbr', fold = 10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>40</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.315001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>736</th>\n",
+       "      <td>37</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.389999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southeast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>50</td>\n",
+       "      <td>male</td>\n",
+       "      <td>26.600000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>963</th>\n",
+       "      <td>46</td>\n",
+       "      <td>male</td>\n",
+       "      <td>24.795000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>21</td>\n",
+       "      <td>female</td>\n",
+       "      <td>17.400000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age     sex        bmi  children smoker     region\n",
+       "67    40    male  26.315001         1     no  northwest\n",
+       "736   37  female  38.389999         0    yes  southeast\n",
+       "310   50    male  26.600000         0     no  southwest\n",
+       "963   46    male  24.795000         3     no  northeast\n",
+       "680   21  female  17.400000         1     no  southwest"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_config(\"X\").head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get_config(\"X_train\").head()\n",
+    "# get_config('X_transformed')\n",
+    "# get_config()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best = compare_models(sort=\"RMSE\")\n"
    ]
   }
  ],
@@ -130,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
